Bug/4149/scrollbar behaviour environment screen (#4222)
* Make vertical scrollbar accessible for environment view, fixing styles for environment services

--- a/bridge/client/app/_components/ktb-stage-overview/ktb-stage-overview.component.scss
+++ b/bridge/client/app/_components/ktb-stage-overview/ktb-stage-overview.component.scss
@@ -12,8 +12,10 @@
     right: 0;
     top: 0;
 
-    box-shadow: -5px 0 10px #f4f4f4 inset;
+    box-shadow: -7px 0 10px #f4f4f4 inset;
     border-right: 1px solid #f4f4f4;
+
+    pointer-events: none;
   }
 }
 
@@ -25,7 +27,7 @@
   }
 
   .stage-group:last-child {
-    padding-right: 10px;
+    padding-right: 16px;
   }
 }
 
